--- a/quiz.html
+++ b/quiz.html
@@ -9,15 +9,15 @@
   <body>
 
 <div class="container">
-    <div id="js-question"class="mt-3 alert alert-primary" role="alert">
+    <div id="js-question"class="mt-3 alert alert-primary" role="alert" style="font-size:30px;">
 
     </div>
 
     <div class="d-flex justify-content-center">
-      <button type="button" class=" ml-1 btn btn-primary">Primary</button>
-      <button type="button" class=" ml-3 btn btn-primary">Primary</button>
-      <button type="button" class=" ml-3 btn btn-primary">Primary</button>
-      <button type="button" class="ml-3 btn btn-primary">Primary</button>
+      <button type="button" class=" ml-1 btn btn-primary" style="font-size:1.5rem;">Primary</button>
+      <button type="button" class=" ml-3 btn btn-primary" style="font-size:1.5rem;">Primary</button>
+      <button type="button" class=" ml-3 btn btn-primary" style="font-size:1.5rem;">Primary</button>
+      <button type="button" class="ml-3 btn btn-primary" style="font-size:1.5rem;">Primary</button>
     </div>
 
 </div>
