--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
 
     <p>ITの知識に関するテストです。</p>
+  <p>問題数は全部で10問です。</p>
     <p>下のボタンをクリックして挑戦してみてください。</p>
 
       <div class="d-flex justify-content-center">
